# src/external/external_controller.go
@@ -29,6 +29,7 @@ func ExternalControllerPrintln(err error) {
 // @Description  Fetches cart by userId from external API
 // @Accept json
 // @Produce  json
+// @Tags cart
 // @Success  200 {object} response.Response{}
 // @Router  /cart/cartbyuser [GET]
 func (controller *ExternalController) GetCartByUserId(ctx *gin.Context) {
@@ -153,6 +154,14 @@ func (controller *ExternalController) GetCartByUserId(ctx *gin.Context) {
 
 }
 
+// AddCardByUserId godoc
+// @Summary  Create cart by userId
+// @Description  Create cart by userId from external API
+// @Accept json
+// @Produce  json
+// @Tags cart
+// @Success  200 {object} response.Response{}
+// @Router  /cart/addusercart [POST]
 func (controller *ExternalController) AddCardByUserId(ctx *gin.Context) {
 
 	userId, userExists := ctx.Get("userId")
@@ -311,6 +320,14 @@ func (controller *ExternalController) AddCardByUserId(ctx *gin.Context) {
 
 }
 
+// UpdateCardByUserId godoc
+// @Summary  Update cart by cartId
+// @Description  Update cart by cartId from external API
+// @Accept json
+// @Produce  json
+// @Tags cart
+// @Success  200 {object} response.Response{}
+// @Router  /cart/updateusercart [PUT]
 func (controller *ExternalController) UpdateCardByUserId(ctx *gin.Context) {
 
 	userId, userExists := ctx.Get("userId")
@@ -486,6 +503,14 @@ func (controller *ExternalController) UpdateCardByUserId(ctx *gin.Context) {
 
 }
 
+// DeleteCardById godoc
+// @Summary  Delete cart by cartId
+// @Description  Delete cart by cartId from external API
+// @Accept json
+// @Produce  json
+// @Tags cart
+// @Success  200 {object} response.Response{}
+// @Router  /cart/deletecart [DELETE]
 func (controller *ExternalController) DeleteCardById(ctx *gin.Context) {
 
 	userId, userExists := ctx.Get("userId")
